# Eye

./: CMakeLists.txt  CONTRIBUTING.md  Grammar.md  README.md  Specification.md
EYEAST/: CMakeLists.txt  Program.h  Statement.h
EYEAST/Expressions/: AssignmentExpression.h  BinaryExpression.h  CallExpression.h  Expression.h  IdentifierExpression.h  LiteralExpression.h  MemberExpression.h  NewExpression.h  PostfixExpression.h  UnaryExpression.h
EYEAST/Statements/: BlockStatement.h  BreakStatement.h  ContinueStatement.h  ControlStatement.h  ExpressionStatement.h  FunctionStatement.h  IterationStatement.h  ReturnStatement.h  Statement.h  StructStatement.h  VariableStatement.h
EYEASTGenerator/: ASTGenerator.cpp  ASTGenerator.h  CMakeLists.txt
EYEASTSerializer/: ASTSerializer.h  CMakeLists.txt  StringSerializer.cpp  StringSerializer.h
EYEError/: CMakeLists.txt  Error.cpp  Error.h
EYEError/Exceptions/: BadDataTypeException.cpp  BadDataTypeException.h  BadOperandTypeException.cpp  BadOperandTypeException.h  BadTypeCompareException.cpp  BadTypeCompareException.h  BadTypeConversionException.cpp  BadTypeConversionException.h  EyeException.cpp  EyeException.h  NotDeclaredException.cpp  NotDeclaredException.h  ReDeclarationException.cpp  ReDeclarationException.h  SyntaxErrorException.cpp  SyntaxErrorException.h  UnexpectedTokenException.cpp  UnexpectedTokenException.h  WriteReadOnlyException.h
EYEExceptions/: CMakeLists.txt  SyntaxErrorException.cpp  SyntaxErrorException.h  UnexpectedTokenException.cpp  UnexpectedTokenException.h
EYELexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  Token.cpp  Token.h
EYEParser/: CMakeLists.txt  Parser.cpp  Parser.h
EYESandbox/: CMakeLists.txt  EYESandbox.cpp
EYESemantic/: CMakeLists.txt  Environment.h  MapEnvironment.h  Semantic.cpp  Semantic.h  SetEnvironment.h  Types.h
EYETest/: CMakeLists.txt  Test.cpp
EYETest/EYELexer/: KeywordTest.cpp  LiteralTest.cpp  OperatorTest.cpp  OtherTest.cpp  SymbolTest.cpp
EYETest/EYELexer/Keyword/: Control.eye  Datatype.eye  Struct.eye
EYETest/EYELexer/Literal/: Boolean.eye  Float.eye  IntegerBinary.eye  IntegerHex.eye  String.eye
EYETest/EYELexer/Operator/: Arithmetic.eye  Assignment.eye  Binary.eye  Chained.eye  Other.eye  Relational.eye
EYETest/EYEParser/: ExpressionTest.cpp  StatementTest.cpp
EYETest/EYEParser/Expression/: AdditiveBinaryExpression.json  AssignmentExpression.json  BitwiseExpression.eye  BitwiseShiftExpression.eye  BitwiseShiftExpression.json  CallExpression.eye  CallExpression.json  EqualityExpression.json  IdentifierExpression.json  LogicalExpression.eye  LogicalExpression.json  MemberExpression.eye  MultiplicativeBinaryExpression.eye  NewExpression.eye  NewExpression.json  PostfixPrefixExpression.eye  PostfixPrefixExpression.json  RelationalExpression.json  UnaryExpression.json
EYETest/EYEParser/Statement/: BlockStatement.eye  ContinueBreakStatement.json  ControlStatement.eye  ControlStatement.json  ExpressionStatement.eye  ExpressionStatement.json  FunctionReturnStatement.eye  FunctionReturnStatement.json  IterationDoWhileStatement.eye  IterationDoWhileStatement.json  IterationForStatement.eye  IterationForStatement.json  IterationStatementDoWhile.json  IterationStatementFor.json  IterationStatementWhile.eye  IterationWhileStatement.json  StructStatement.eye  StructStatement.json  TypeQualifierStatement.eye  TypeQualifierStatement.json  VariableStatement.eye  VariableStatement.json
EYETest/EYESemantic/: CMakeLists.txt
EYETest/EYESemantic/Statement/: VariableStatementTest.cpp
EYETest/EYETypeChecker/Expression/: AssignmentExpressionTest.cpp  BinaryExpressionTest.cpp  CallExpressionTest.cpp  PostfixExpressionTest.cpp  UnaryExpressionTest.cpp
EYETest/EYETypeChecker/Statement/: BlockStatementTest.cpp  ControlStatementTest.cpp  FunctionStatementTest.cpp  IterationStatementTest.cpp  VariableStatementTest.cpp
EYETest/Lexer/: KeywordTest.cpp  LiteralTest.cpp  OperatorTest.cpp  OtherTest.cpp  SymbolTest.cpp
EYETest/Lexer/Keyword/: Function.eye  Iteration.eye
EYETest/Lexer/Literal/: IntegerDecimal.eye  Null.eye
EYETest/Lexer/Operator/: Bitwise.eye  Logical.eye
EYETest/Lexer/Symbol/: MathExpr.eye
EYETest/Parser/: ExpressionErrorTest.cpp  ExpressionTest.cpp  StatementTest.cpp
EYETest/Parser/Expression/: AssignmentExpression.json  BitwiseExpression.json  EqualityExpression.eye  LiteralExpression.eye  LiteralExpression.json  MemberExpression.json  MultiplicativeBinaryExpression.json  ParenthesizedExpression.json  RelationalExpression.eye  UnaryExpression.eye
EYETest/Parser/Statement/: BlockStatement.json  ContinueBreakStatement.eye  FunctionReturnStatement.eye  FunctionReturnStatement.json  IterationForStatement.eye  IterationWhileStatement.eye  TypeQualifierStatement.eye
EYETest/Semantic/Expression/: CallExpressionTest.cpp
EYETest/Semantic/Statement/: FunctionStatementTest.cpp  VariableStatementTest.cpp
EYETypeChecker/: CMakeLists.txt  Environment.h  Type.cpp  Type.h  TypeChecker.cpp  TypeChecker.h  TypeEnvironment.cpp  TypeEnvironment.h
EYETypes/: CMakeLists.txt  Location.h  Position.h
EYEUtility/: Assertion.h  CMakeLists.txt  Error.cpp  Error.h  EyeSource.cpp  EyeSource.h  FileIO.cpp  Logger.cpp  Logger.h  Platform.h
Eye/: CMakeLists.txt  Eye.cpp  Main.cpp
Eye/AST/: CMakeLists.txt  Program.h
Eye/ASTGenerator/: ASTGenerator.cpp  ASTGenerator.h  CMakeLists.txt
Eye/ASTSerializer/: ASTSerializer.h  CMakeLists.txt  StringSerializer.cpp  StringSerializer.h
Eye/Common/: Common.h  Eye.cpp  Eye.h
Eye/Error/: CMakeLists.txt  Error.cpp  Error.h
Eye/Lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  Token.cpp  Token.h
Eye/Parser/: CMakeLists.txt  Node.h  Parser.cpp  Parser.h
Eye/Semantic/: CMakeLists.txt  MapEnvironment.h  Semantic.cpp  Semantic.h  SetEnvironment.h  Types.h
Eye/TypeChecker/: CMakeLists.txt  Environment.h  Type.cpp  Type.h  TypeChecker.cpp  TypeChecker.h
Eye/Util/: Assertion.h  FileIO.cpp  FileIO.h  Logger.cpp  Logger.h
Eye/Utility/: Assertion.h  CMakeLists.txt  EyeSource.cpp  EyeSource.h  FileIO.cpp  FileIO.h  Logger.cpp
(+144 files in other folders)
