file(GLOB_RECURSE EYEASTGeneratorSources
	"${CMAKE_CURRENT_SOURCE_DIR}/ASTGenerator.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/ASTGenerator.cpp"
)

add_library(${EYEASTGENERATOR_TARGET_NAME} STATIC ${EYEASTGeneratorSources})
target_include_directories(${EYEASTGENERATOR_TARGET_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../")
target_link_libraries(${EYEASTGENERATOR_TARGET_NAME} PRIVATE ${EYEUTILITY_TARGET_NAME})
target_link_libraries(${EYEASTGENERATOR_TARGET_NAME} PRIVATE ${EYELEXER_TARGET_NAME})
target_link_libraries(${EYEASTGENERATOR_TARGET_NAME} PRIVATE ${EYEPARSER_TARGET_NAME})
target_link_libraries(${EYEASTGENERATOR_TARGET_NAME} PRIVATE ${EYEAST_TARGET_NAME})
target_link_libraries(${EYEASTGENERATOR_TARGET_NAME} PRIVATE ${EYEASTSERIALIZER_TARGET_NAME})
