file(GLOB_RECURSE EYEASTSerializerSources
	"${CMAKE_CURRENT_SOURCE_DIR}/ASTSerializer.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/StringSerializer.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/StringSerializer.cpp"
)

add_library(${EYEASTSERIALIZER_TARGET_NAME} STATIC ${EYEASTSerializerSources})
target_include_directories(${EYEASTSERIALIZER_TARGET_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../")
target_link_libraries(${EYEASTSERIALIZER_TARGET_NAME} PRIVATE ${EYEUTILITY_TARGET_NAME})
target_link_libraries(${EYEASTSERIALIZER_TARGET_NAME} PRIVATE ${EYEAST_TARGET_NAME})
