file(GLOB_RECURSE EYELexerSources
	"${CMAKE_CURRENT_SOURCE_DIR}/Token.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Token.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/Lexer.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Lexer.cpp"
)

add_library(${EYELEXER_TARGET_NAME} STATIC ${EYELexerSources})
target_include_directories(${EYELEXER_TARGET_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../")
target_link_libraries(${EYELEXER_TARGET_NAME} PRIVATE ${EYEUTILITY_TARGET_NAME})
target_link_libraries(${EYELEXER_TARGET_NAME} PRIVATE ${EYEERROR_TARGET_NAME})
target_link_libraries(${EYELEXER_TARGET_NAME} PRIVATE ${EYETYPES_TARGET_NAME})
