file(GLOB_RECURSE EYEParserSources
	"${CMAKE_CURRENT_SOURCE_DIR}/Parser.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Parser.cpp"
)

add_library(${EYEPARSER_TARGET_NAME} STATIC ${EYEParserSources})
target_include_directories(${EYEPARSER_TARGET_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../")
target_link_libraries(${EYEPARSER_TARGET_NAME} PRIVATE ${EYEUTILITY_TARGET_NAME})
