file(GLOB_RECURSE EYESemanticSources
	"${CMAKE_CURRENT_SOURCE_DIR}/Semantic.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Semantic.cpp"
)

add_library(${EYESEMANTIC_TARGET_NAME} STATIC ${EYESemanticSources})
target_include_directories(${EYESEMANTIC_TARGET_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../")
target_link_libraries(${EYESEMANTIC_TARGET_NAME} PRIVATE ${EYEUTILITY_TARGET_NAME})
target_link_libraries(${EYESEMANTIC_TARGET_NAME} PRIVATE ${EYEAST_TARGET_NAME})
target_link_libraries(${EYESEMANTIC_TARGET_NAME} PRIVATE ${EYEERROR_TARGET_NAME})
