file(GLOB_RECURSE EYETypeCheckerSources
	"${CMAKE_CURRENT_SOURCE_DIR}/TypeChecker.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/TypeChecker.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/Type.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/Type.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/TypeEnvironment.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/TypeEnvironment.cpp"
)

add_library(${EYETYPECHECKER_TARGET_NAME} STATIC ${EYETypeCheckerSources})
target_include_directories(${EYETYPECHECKER_TARGET_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../")
target_link_libraries(${EYETYPECHECKER_TARGET_NAME} PRIVATE ${EYEUTILITY_TARGET_NAME})
target_link_libraries(${EYETYPECHECKER_TARGET_NAME} PRIVATE ${EYEAST_TARGET_NAME})
